fixed issue http://teamopenuss.uni-muenster.de/jira/browse/USS-778 and a lot of find bug fixes and code polishing
git-svn-id: https://svn.code.sf.net/p/openuss/code/trunk/openuss-plexus@2593 60046477-0c10-0410-bf4b-e552a4ff1768